--- a/proyecto.ipynb
+++ b/proyecto.ipynb
@@ -45,7 +45,7 @@
     "options = uc.ChromeOptions()\n",
     "\n",
     "# Configurar el modo headless del navegador (sin interfaz gráfica)\n",
-    "options.headless = False\n",
+    "options.headless = True\n",
     "\n",
     "# Agregar argumentos para abrir una ventana de incógnito\n",
     "options.add_argument(\"--incognito\")\n",
