--- a/tareas/206002_jdl/Tarea Scrapping .ipynb
+++ b/tareas/206002_jdl/Tarea Scrapping .ipynb
@@ -42,8 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "68af1833",
+   "execution_count": null,
+   "id": "948872ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "b0495d30",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['Star Wars: Episode IV - A New Hope[124]\\u200b', '25 de mayo de 1977', '$460.998.507', '$314.513.557', '$775.512.064', '$13.000.000', '[125]\\u200b'], ['Star Wars: Episode V - The Empire Strikes Back[126]\\u200b', '21 de mayo de 1980', '$290.271.960', '$257.607.494', '$538.375.067', '$18.000.000', '[127]\\u200b'], ['Star Wars: Episode VI - Return of the Jedi[128]\\u200b', '25 de mayo de 1983', '$309.306.177', '$166.040.934', '$482.365.284', '$32.5.000.000', '[129]\\u200b'], ['Star Wars: Episode I - The Phantom Menace[130]\\u200b', '19 de mayo de 1999', '$474.544.677', '$552.538.030', '$1.027.082.707', '$115.000.000', '[131]\\u200b'], ['Star Wars: Episode II - Attack of the Clones[132]\\u200b', '16 de mayo de 2002', '$310.676.740', '$343.103.230', '$653.779.970', '$115.000.000', '[133]\\u200b'], ['Star Wars: Episode III - Revenge of the Sith[134]\\u200b', '19 de mayo de 2005', '$380.270.588', '$488.765.058', '$868.035.635', '$113.000.000', '[133]\\u200b'], ['Star Wars: The Clone Wars', '15 de agosto de 2008', '$35.161.554', '$33.121.290', '$68.282.844', '$8.5.000.000', '[135]\\u200b'], ['Star Wars: Episode VII - The Force Awakens[136]\\u200b', '18 de diciembre de 2015', '$936.662.225', '$1.131.561.399', '$2.068.223.624', '$306.000.000', '[137]\\u200b'], ['Rogue One: A Star Wars Story[138]\\u200b', '10 de diciembre de 2016', '$532.177.324', '$523.879.949', '$1.056.057.278', '$200–265.000.000', '[139]\\u200b[140]\\u200b'], ['Star Wars: Episode VIII - The Last Jedi[141]\\u200b', '15 de diciembre de 2017', '$620.181.382', '$714.358.507', '$1.334.539.889', '$317.000.000', '[142]\\u200b'], ['Solo: A Star Wars Story[143]\\u200b', '25 de mayo de 2018', '$213.767.512', '$179.157.295', '$393.924.807', '$275-300.000.000', '[144]\\u200b[145]\\u200b'], ['Star Wars: Episode IX - Rise of Skywalker[146]\\u200b', '20 de diciembre de 2019', '$515.202.543', '$561.941.706', '$1.077.232.589', '$275.000.000', '[147]\\u200b']]\n"
+      "Dataframe:\n",
+      "                                             Película  \\\n",
+      "0            Star Wars: Episode IV - A New Hope[124]​   \n",
+      "1   Star Wars: Episode V - The Empire Strikes Back...   \n",
+      "2    Star Wars: Episode VI - Return of the Jedi[128]​   \n",
+      "3     Star Wars: Episode I - The Phantom Menace[130]​   \n",
+      "4   Star Wars: Episode II - Attack of the Clones[1...   \n",
+      "5   Star Wars: Episode III - Revenge of the Sith[1...   \n",
+      "6                           Star Wars: The Clone Wars   \n",
+      "7    Star Wars: Episode VII - The Force Awakens[136]​   \n",
+      "8                  Rogue One: A Star Wars Story[138]​   \n",
+      "9       Star Wars: Episode VIII - The Last Jedi[141]​   \n",
+      "10                      Solo: A Star Wars Story[143]​   \n",
+      "11    Star Wars: Episode IX - Rise of Skywalker[146]​   \n",
+      "\n",
+      "                    Estreno Recaudación EE.UU. Recaudación Mundial  \\\n",
+      "0        25 de mayo de 1977       $460.998.507        $314.513.557   \n",
+      "1        21 de mayo de 1980       $290.271.960        $257.607.494   \n",
+      "2        25 de mayo de 1983       $309.306.177        $166.040.934   \n",
+      "3        19 de mayo de 1999       $474.544.677        $552.538.030   \n",
+      "4        16 de mayo de 2002       $310.676.740        $343.103.230   \n",
+      "5        19 de mayo de 2005       $380.270.588        $488.765.058   \n",
+      "6      15 de agosto de 2008        $35.161.554         $33.121.290   \n",
+      "7   18 de diciembre de 2015       $936.662.225      $1.131.561.399   \n",
+      "8   10 de diciembre de 2016       $532.177.324        $523.879.949   \n",
+      "9   15 de diciembre de 2017       $620.181.382        $714.358.507   \n",
+      "10       25 de mayo de 2018       $213.767.512        $179.157.295   \n",
+      "11  20 de diciembre de 2019       $515.202.543        $561.941.706   \n",
+      "\n",
+      "             Total       Presupuesto    Referencia  \n",
+      "0     $775.512.064       $13.000.000        [125]​  \n",
+      "1     $538.375.067       $18.000.000        [127]​  \n",
+      "2     $482.365.284     $32.5.000.000        [129]​  \n",
+      "3   $1.027.082.707      $115.000.000        [131]​  \n",
+      "4     $653.779.970      $115.000.000        [133]​  \n",
+      "5     $868.035.635      $113.000.000        [133]​  \n",
+      "6      $68.282.844      $8.5.000.000        [135]​  \n",
+      "7   $2.068.223.624      $306.000.000        [137]​  \n",
+      "8   $1.056.057.278  $200–265.000.000  [139]​[140]​  \n",
+      "9   $1.334.539.889      $317.000.000        [142]​  \n",
+      "10    $393.924.807  $275-300.000.000  [144]​[145]​  \n",
+      "11  $1.077.232.589      $275.000.000        [147]​  \n"
      ]
     },
     {
@@ -86,29 +127,29 @@
     }
    ],
    "source": [
+    "# Configurar las opciones del navegador Chrome\n",
     "chrome_options = webdriver.ChromeOptions()\n",
-    "chrome_options.add_argument(\"--incognito\")\n",
-    "chrome_options.add_argument(\"--headless\")\n",
-    "chrome_options.add_argument(\"--disable-gpu\")\n",
-    "chrome_options.add_argument(\"--window-size=1920,1080\")\n",
+    "chrome_options.add_argument(\"--incognito\")  # Modo incógnito\n",
+    "chrome_options.add_argument(\"--headless\")   # Modo sin interfaz gráfica\n",
+    "chrome_options.add_argument(\"--disable-gpu\")  # Deshabilitar GPU\n",
+    "chrome_options.add_argument(\"--window-size=1920,1080\")  # Tamaño de la ventana\n",
     "\n",
     "# Inicializar el navegador con las opciones configuradas\n",
     "driver = webdriver.Chrome(options=chrome_options)\n",
     "\n",
-    "# Aquí puedes usar el objeto 'driver' para interactuar con el navegador\n",
-    "# Por ejemplo:\n",
+    "# Navegar a la página de Wikipedia que lista las películas de Star Wars\n",
     "driver.get(\"https://es.wikipedia.org/wiki/Anexo:Pel%C3%ADculas_de_Star_Wars\")\n",
     "\n",
     "# Obtener el contenido HTML de la página\n",
     "html = driver.page_source\n",
     "\n",
-    "# Analizar el HTML con Beautiful Soup\n",
+    "# Analizar el HTML con BeautifulSoup\n",
     "soup = BeautifulSoup(html, \"html.parser\")\n",
     "\n",
-    "# Encontrar la quinta tabla en el HTML\n",
+    "# Encontrar la quinta tabla en el HTML que contiene los datos de las películas\n",
     "table = soup.find_all(\"table\", {\"class\": \"wikitable\"})[4].find(\"tbody\")\n",
     "\n",
-    "# Extraer los datos de la tabla\n",
+    "# Extraer los datos de la tabla y almacenarlos en una lista\n",
     "data = []\n",
     "rows = table.find_all(\"tr\")\n",
     "for row in rows:\n",
@@ -117,9 +158,14 @@
     "    if len(cols) == 7:  # Asegurarse de que solo se procesen filas completas\n",
     "        data.append(cols)\n",
     "\n",
+    "# Crear un DataFrame de pandas con los datos extraídos\n",
+    "df = pd.DataFrame(data, columns=['Película', 'Estreno', 'Recaudación EE.UU.', 'Recaudación Mundial', 'Total', 'Presupuesto', 'Referencia'])\n",
     "\n",
-    "print(data)  \n",
+    "# Imprimir el DataFrame\n",
+    "print(\"Dataframe:\")\n",
+    "print(df)\n",
     "\n",
+    "# Procesar los datos para crear listas de nombres de películas y recaudación\n",
     "peliculas = []\n",
     "recaudacion_eeuu = []\n",
     "recaudacion_mundo = []\n",
@@ -133,11 +179,12 @@
     "        # Manejar posibles valores incorrectos en los datos\n",
     "        print(f\"Error procesando los datos de la película: {pelicula[0]}\")\n",
     "\n",
-    "# Crear gráfico\n",
+    "# Crear gráfico de barras horizontales\n",
     "fig, ax = plt.subplots(figsize=(14, 8))\n",
     "fig.patch.set_facecolor('#0d1b2a')  # Fondo de la figura\n",
     "ax.set_facecolor('#0d1b2a')  # Fondo del área del gráfico\n",
     "\n",
+    "# Añadir barras para la recaudación de EE.UU. y resto del mundo\n",
     "ax.barh(peliculas, recaudacion_eeuu, color='#415a77', label='EE.UU.')\n",
     "ax.barh(peliculas, recaudacion_mundo, color='#7f388b', left=recaudacion_eeuu, label='Resto del Mundo')\n",
     "ax.set_xlabel('Recaudación (en dólares)', color='white')\n",
@@ -157,6 +204,40 @@
     "\n",
     "# Mostrar gráfico\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2c63862",
+   "metadata": {},
+   "source": [
+    "1. **Configuración del entorno de desarrollo e instalación de librerías necesarias:**\n",
+    "   - Utilicé las librerías necesarias para realizar el scraping y el análisis de datos.\n",
+    "   - Las librerías principales incluyen Selenium para la automatización del navegador, BeautifulSoup para el análisis HTML y pandas para la manipulación de datos estructurados.\n",
+    "\n",
+    "2. **Configuración del navegador utilizando Selenium:**\n",
+    "   - Utilicé undetected_chromedriver para evitar la detección del navegador automatizado.\n",
+    "   - Configuré opciones para el navegador Chrome, como el modo incógnito y sin interfaz gráfica (headless), utilizando chrome_options.add_argument().\n",
+    "\n",
+    "3. **Elección de un sitio web para hacer scraping:**\n",
+    "   - No proporcioné un sitio web específico en el ejemplo, pero sugerí seleccionar uno que ofrezca datos dinámicos y sea legal para hacer scraping, como datos meteorológicos, precios de productos, cotizaciones de bolsa, etc.\n",
+    "\n",
+    "4. **Navegación al sitio web y manipulación de datos utilizando Selenium:**\n",
+    "   - Utilicé Selenium para navegar al sitio web objetivo y realizar acciones de interacción como búsquedas o filtrado de datos si fue necesario.\n",
+    "\n",
+    "5. **Extracción de datos relevantes utilizando Selenium y BeautifulSoup:**\n",
+    "   - Utilicé Selenium para obtener el contenido HTML de la página web con el método page_source.\n",
+    "   - Utilicé BeautifulSoup para analizar el HTML y extraer los datos relevantes de la página.\n",
+    "\n",
+    "6. **Limpieza y organización de los datos extraídos en un DataFrame de pandas:**\n",
+    "   - Creé un DataFrame de pandas con los datos extraídos y los organicé según fue necesario.\n",
+    "\n",
+    "7. **Análisis básico de los datos: estadístico descriptivo o visualización simple:**\n",
+    "   - Realicé un análisis estadístico descriptivo o visualización simple de los datos utilizando pandas y matplotlib.\n",
+    "\n",
+    "8. **Documentación del proceso con comentarios en el código y celdas Markdown explicativas:**\n",
+    "   - Agregué comentarios detallados en el código explicando cada paso y decisión tomada para mejorar la comprensión y facilitar la colaboración.\n",
+    "   - Documenté el proceso en celdas Markdown dentro del entorno de desarrollo o en un informe adjunto para proporcionar contexto adicional y detalles sobre el proceso de scraping y análisis de datos.\n"
    ]
   }
  ],
