quitar archivos extras

--- a/tareas/206002_jdl/Tarea Scrapping .ipynb
+++ b/tareas/206002_jdl/Tarea Scrapping .ipynb
@@ -227,6 +227,7 @@
     "\n",
     "5. **Extracción de datos relevantes utilizando Selenium y BeautifulSoup:**\n",
     "   - Utilicé Selenium para obtener el contenido HTML de la página web con el método page_source.\n",
+    "   -Utilicé wikipedia ya que su contenido está disponible para el uso y redistribución y para scraping personal no hay nada en contra de su reglamento\n",
     "   - Utilicé BeautifulSoup para analizar el HTML y extraer los datos relevantes de la página.\n",
     "\n",
     "6. **Limpieza y organización de los datos extraídos en un DataFrame de pandas:**\n",
